--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yml = "0.0.12"
 time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
-tokio = { version = "1.44.2", features = ["io-util", "macros", "process", "rt-multi-thread", "signal"] }
+tokio = { version = "1.44.2", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
 tokio-util = "0.7.15"
