--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_yml = "0.0.12"
 time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
 tokio = { version = "1.44.2", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
 tokio-util = "0.7.15"
+toml = "0.8.22"
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.29.0", features = ["signal"] }
